# audio_examples

./: .gitignore  Dockerfile  README.md
.github/workflows/: pylint.yml
doc/: configuration.md
online_asr_with_vad/: README.md  config.yaml  data_loader.py  online_asr_with_vad.py  pyproject.toml  vad.py
online_asr_with_vad_onnx/: README.md  asr.py  config.yaml  online_asr_with_vad_onnx.py  requirements.txt  vad.py
tools/: README.md  export_silero_vad_onnx.py
utils/: sound_device_list.py  spectrogram_file.py
