[project]
name = "audio-examples"
version = "0.1.0"
description = "Local speech recognition examples with NeMo VAD and Whisper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.0",
    "nemo-toolkit[asr]>=2.0.0",
    "numpy>=1.24.0",
    "openai-whisper>=20240930",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "torch>=2.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
